--- a/src/html/components/s-about.html
+++ b/src/html/components/s-about.html
@@ -17,7 +17,18 @@
         </div>
         <a href="#" class="btn-s s-about__btn">Этапы производства</a>
       </div>
-      <a href="//github.com/mediaelement/mediaelement-files/blob/master/big_buck_bunny.mp4?raw=true" data-fancybox class="s-about__gallery"></a>
+      <a
+        href="//github.com/mediaelement/mediaelement-files/blob/master/big_buck_bunny.mp4?raw=true"
+        data-fancybox
+        class="s-about__gallery"
+      >
+        <div class="play-btn">
+          <svg>
+            <use xlink:href='img/icons/icons.svg#icon-play'></use>
+          </svg>
+        </div>
+        <img src="@img/about.jpg" alt="image" />
+      </a>
     </div>
   </div>
 </section>
