--- a/src/scss/ui/tab.scss
+++ b/src/scss/ui/tab.scss
@@ -1,6 +1,8 @@
-.tab {
+[data-tab] {
   display: none;
-  &.active {
+  opacity: 0;
+  transition: opacity .4s ease;
+  &._active {
     display: block;
   }
 }
