--- a/src/scss/ui/button.scss
+++ b/src/scss/ui/button.scss
@@ -36,6 +36,7 @@
   background-color: var(--dark);
   border-radius: 50px;
   padding: 19px 40px;
+  width: fit-content;
   border: 1px solid var(--dark);
 
   text-align: center;
