--- a/src/html/components/s-quiz.html
+++ b/src/html/components/s-quiz.html
@@ -1,30 +1,61 @@
-<section class="sect-p s-quiz">
-  <div class="container">
-    <div class="s-quiz__head">
-      <a href="/" class="s-quiz__logo">
-        <img src="@img/logo-white.svg" alt="logo" />
-      </a>
-      <a href="tel:+79872179999" class="s-quiz__tel">
-        <svg>
-          <use xlink:href="img/icons/icons.svg#icon-tel"></use>
-        </svg>
-        <span>+7 (987) 217‒99‒99</span>
-      </a>
-    </div>
-    <div class="s-quiz__body">
-      <img src="@img/quiz-img.png" alt="image" class="s-quiz__img" />
-      <div class="s-quiz__main">
-        <h2 class="s-quiz__title">
-          Получите протокол работы с тотальным протезированием all-on-4 за 5 мин
-        </h2>
-        <p class="s-quiz__content">
-          Ответьте на 4 вопроса и получите
-          <br />
-          результат от квалифицированных специалистов!
-        </p>
-        <button class="btn-s _white-outline s-quiz__btn-get">Получить протокол</button>
-        <a href="mailto:dentalresource@mail.ru" class="s-quiz__mail">dentalresource@mail.ru</a>
+<section class="s-quiz">
+  <div class="s-quiz__slide _line sect-p">
+    <div class="container">
+      <div class="s-quiz__head">
+        <a href="/" class="s-quiz__logo">
+          <img src="@img/logo-white.svg" alt="logo" />
+        </a>
+        <a href="tel:+79872179999" class="s-quiz__tel">
+          <svg>
+            <use xlink:href="img/icons/icons.svg#icon-tel"></use>
+          </svg>
+          <span>+7 (987) 217‒99‒99</span>
+        </a>
+      </div>
+      <div class="s-quiz__body">
+        <img src="@img/quiz-img.png" alt="image" class="s-quiz__img" />
+        <div class="s-quiz__main">
+          <h2 class="s-quiz__title">
+            Получите протокол работы с тотальным протезированием all-on-4 за 5 мин
+          </h2>
+          <p class="s-quiz__content">
+            Ответьте на 4 вопроса и получите
+            <br />
+            результат от квалифицированных специалистов!
+          </p>
+          <button class="btn-s _white-outline s-quiz__btn-get">Получить протокол</button>
+          <a href="mailto:dentalresource@mail.ru" class="s-quiz__mail">dentalresource@mail.ru</a>
+        </div>
       </div>
     </div>
   </div>
+  <form action="#">
+    <div class="s-quiz__slide sect-p">
+      <div class="container">
+        <h3 class="s-title s-quiz__slide-title">1. На какой челюсти хотите поставить протез All-on-4?</h3>
+        <div class="s-quiz__veriants-gallery">
+          <input type="radio" name="Челюсть" value="На нижней челюсти" id="jaw-1" class="s-quiz__input-radio">
+          <label for="jaw-1" class="s-quiz__var-gallery">
+            <img src="@img/quiz-var.jpg" alt="image" class="s-quiz__var-img">
+            <span>На нижней челюсти</span>
+          </label>
+          <input type="radio" name="Челюсть" value="На нижней челюсти" id="jaw-2" class="s-quiz__input-radio">
+          <label for="jaw-2" class="s-quiz__var-gallery">
+            <img src="@img/quiz-var-2.jpg" alt="image" class="s-quiz__var-img">
+            <span>На верхней челюсти</span>
+          </label>
+          <input type="radio" name="Челюсть" value="На нижней челюсти" id="jaw-3" class="s-quiz__input-radio">
+          <label for="jaw-3" class="s-quiz__var-gallery">
+            <img src="@img/quiz-var-3.jpg" alt="image" class="s-quiz__var-img">
+            <span>На обеих челюсях</span>
+          </label>
+          <input type="radio" name="Челюсть" value="На нижней челюсти" id="jaw-4" class="s-quiz__input-radio">
+          <label for="jaw-4" class="s-quiz__var-gallery">
+            <img src="@img/quiz-var-4.jpg" alt="image" class="s-quiz__var-img">
+            <span>Не знаю, нужна консультация</span>
+          </label>
+        </div>
+      </div>
+    </div>
+  </form>
 </section>
