--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -12,6 +12,7 @@
 @import "./ui/slider";
 @import "./ui/more-items";
 @import "./ui/tab";
+@import "./ui/form";
 
 // widgets
 @import "./widgets/burger";
