--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -24,5 +24,6 @@
 @import "./components/s-about";
 @import "./components/s-services";
 @import "./components/s-quiz";
+@import "./components/s-res";
 
 @import "./components/footer";
