--- a/src/scss/base/body-config.scss
+++ b/src/scss/base/body-config.scss
@@ -28,3 +28,16 @@
     margin-bottom: 30px;
   }
 }
+
+.sect-head {
+  @include flex-between;
+  gap: 20px;
+  margin-bottom: 40px;
+  @include tablet {
+    margin-bottom: 30px;
+  }
+
+  .s-title {
+    margin-bottom: 0 !important;
+  }
+}
