--- a/src/scss/ui/slider.scss
+++ b/src/scss/ui/slider.scss
@@ -1,3 +1,11 @@
+.slider-nav {
+  display: flex;
+  gap: 15px;
+  // @include tablet {
+  //   display: none;
+  // }
+}
+
 .slider-btn {
   @include flex-center;
   cursor: pointer;
@@ -9,6 +17,11 @@
   transition: opacity .2s ease;
   @include hover {
     opacity: 0.7;
+  }
+
+  @include tablet {
+    width: 40px;
+    height: 40px;
   }
 
   &.swiper-button-disabled {
@@ -31,7 +44,12 @@
   }
 
   svg {
+    display: block;
     width: 15px;
     height: 15px;
+    @include tablet {
+      width: 12px;
+      height: 12px;
+    }
   }
 }
