--- a/src/html/components/s-about.html
+++ b/src/html/components/s-about.html
@@ -1,4 +1,4 @@
-<section class="s-about sect-m">
+<section class="s-about sect-m" id="s-about">
   <div class="container">
     <h2 class="s-title">О лаборатории</h2>
     <div class="s-about__wrapper">
@@ -15,7 +15,7 @@
             ваших пациентов с нашими инновационными продуктами!
           </p>
         </div>
-        <a href="#" class="btn-s s-about__btn">Этапы производства</a>
+        <a href="#s-steps" data-anchor class="btn-s s-about__btn">Этапы производства</a>
       </div>
       <a
         href="//github.com/mediaelement/mediaelement-files/blob/master/big_buck_bunny.mp4?raw=true"
