--- a/src/html/components/s-quiz.html
+++ b/src/html/components/s-quiz.html
@@ -1,4 +1,4 @@
-<section class="s-quiz sect-p">
+<section class="s-quiz sect-p" id="s-quiz">
   <div class="s-quiz__slide _line" id="quiz-start">
     <div class="container">
       <div class="s-quiz__head">
