--- a/src/html/components/s-res.html
+++ b/src/html/components/s-res.html
@@ -1,4 +1,4 @@
-<section class="sect-p s-res _gray">
+<section class="sect-p s-res _gray" id="s-res">
   <div class="container">
     <div class="sect-head">
       <h2 class="s-title">Результаты лечения</h2>
@@ -19,7 +19,107 @@
       <div class="swiper-wrapper">
         <article class="swiper-slide s-res__slide">
           <div class="s-res__slide-gallery">
-            <input type="range" value="50" class="s-res__slide-range">
+            <input type="range" value="50" class="s-res__slide-range" />
+            <div class="s-res__slide-toggle">
+              <div class="s-res__slide-toggle-inside"></div>
+            </div>
+            <img
+              src="@img/before.jpg"
+              alt="image"
+              class="s-res__slide-before"
+            />
+            <img src="@img/after.jpg" alt="image" class="s-res__slide-after" />
+          </div>
+          <div class="s-res__slide-body">
+            <h5 class="s-res__slide-title">До и после All-On-4</h5>
+            <p class="s-res__slide-content">
+              Подробное описание проведенной процедуры...
+            </p>
+          </div>
+        </article>
+        <article class="swiper-slide s-res__slide">
+          <div class="s-res__slide-gallery">
+            <input type="range" value="50" class="s-res__slide-range" />
+            <div class="s-res__slide-toggle">
+              <div class="s-res__slide-toggle-inside"></div>
+            </div>
+            <img
+              src="@img/before.jpg"
+              alt="image"
+              class="s-res__slide-before"
+            />
+            <img src="@img/after.jpg" alt="image" class="s-res__slide-after" />
+          </div>
+          <div class="s-res__slide-body">
+            <h5 class="s-res__slide-title">До и после All-On-4</h5>
+            <p class="s-res__slide-content">
+              Подробное описание проведенной процедуры...
+            </p>
+          </div>
+        </article>
+        <article class="swiper-slide s-res__slide">
+          <div class="s-res__slide-gallery">
+            <input type="range" value="50" class="s-res__slide-range" />
+            <div class="s-res__slide-toggle">
+              <div class="s-res__slide-toggle-inside"></div>
+            </div>
+            <img
+              src="@img/before.jpg"
+              alt="image"
+              class="s-res__slide-before"
+            />
+            <img src="@img/after.jpg" alt="image" class="s-res__slide-after" />
+          </div>
+          <div class="s-res__slide-body">
+            <h5 class="s-res__slide-title">До и после All-On-4</h5>
+            <p class="s-res__slide-content">
+              Подробное описание проведенной процедуры...
+            </p>
+          </div>
+        </article>
+        <article class="swiper-slide s-res__slide">
+          <div class="s-res__slide-gallery">
+            <input type="range" value="50" class="s-res__slide-range" />
+            <div class="s-res__slide-toggle">
+              <div class="s-res__slide-toggle-inside"></div>
+            </div>
+            <img
+              src="@img/before.jpg"
+              alt="image"
+              class="s-res__slide-before"
+            />
+            <img src="@img/after.jpg" alt="image" class="s-res__slide-after" />
+          </div>
+          <div class="s-res__slide-body">
+            <h5 class="s-res__slide-title">До и после All-On-4</h5>
+            <p class="s-res__slide-content">
+              Подробное описание проведенной процедуры...
+            </p>
+          </div>
+        </article>
+        <article class="swiper-slide s-res__slide">
+          <div class="s-res__slide-gallery">
+            <input type="range" value="50" class="s-res__slide-range" />
+            <div class="s-res__slide-toggle">
+              <div class="s-res__slide-toggle-inside"></div>
+            </div>
+            <img
+              src="@img/before.jpg"
+              alt="image"
+              class="s-res__slide-before"
+            />
+            <img src="@img/after.jpg" alt="image" class="s-res__slide-after" />
+          </div>
+          <div class="s-res__slide-body">
+            <h5 class="s-res__slide-title">До и после All-On-4</h5>
+            <p class="s-res__slide-content">
+              Подробное описание проведенной процедуры...
+            </p>
+          </div>
+        </article>
+        <article class="swiper-slide s-res__slide">
+          <div class="s-res__slide-gallery">
+            <input type="range" value="50" class="s-res__slide-range" />
             <div class="s-res__slide-toggle">
               <div class="s-res__slide-toggle-inside"></div>
             </div>
