--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -13,6 +13,7 @@
 @import "./ui/more-items";
 @import "./ui/tab";
 @import "./ui/form";
+@import "./ui/card-spec";
 
 // widgets
 @import "./widgets/burger";
@@ -25,5 +26,10 @@
 @import "./components/s-services";
 @import "./components/s-quiz";
 @import "./components/s-res";
+@import "./components/s-steps";
+@import "./components/s-gallery";
+@import "./components/s-team";
+@import "./components/s-connect";
+@import "./components/s-social";
 
 @import "./components/footer";
