--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -31,5 +31,6 @@
 @import "./components/s-team";
 @import "./components/s-connect";
 @import "./components/s-social";
+@import "./components/s-contacts";
 
 @import "./components/footer";
