--- a/src/html/components/footer.html
+++ b/src/html/components/footer.html
@@ -1,6 +1,86 @@
 <footer class="footer">
-	<div class="container">
-	</div>
+  <div class="container">
+    <div class="footer__wrapper">
+      <div class="footer__main">
+        <a href="/" class="footer__logo">
+          <img src="@img/logo-white.svg" alt="logo" />
+        </a>
+        <p class="footer__content">
+          ООО “ВАЙТ ЛАЙН” ИНН 7722473993 <br>
+          <a href="https://dentalresource.ru/info" target="_blank">
+            Лицензия № Л041-01137-77/00498302 Оператор персональных данных в
+            реестре: 77-25-171186
+          </a>
+        </p>
+      </div>
+      <nav class="footer__nav">
+        <ul class="list footer__list">
+          <li><a href="#s-about" data-anchor>О лаборатории</a></li>
+          <li><a href="#s-services" data-anchor>Услуги</a></li>
+          <li><a href="#s-team" data-anchor>Специалисты</a></li>
+        </ul>
+        <ul class="list footer__list">
+          <li><a href="#s-res" data-anchor>Результаты лечения</a></li>
+          <li><a href="#s-steps" data-anchor>Производство</a></li>
+          <li><a href="#s-contacts" data-anchor>Контакты</a></li>
+        </ul>
+      </nav>
+      <div class="footer__contacts">
+        <a href="tel:+79872179999" class="footer__tel">+7 (987) 217‒99‒99</a>
+        <p class="footer__contacts-content">
+          г. Москва, ул. Авиамоторная, 32Б
+          <br />
+          пн-вс: 10:00-21:00
+        </p>
+        <a href="mailto:dentalresource@mail.ru" class="footer__mail">
+          dentalresource@mail.ru
+        </a>
+        <a
+          href="#s-connect"
+          data-anchor
+          class="btn-s _white-outline footer__contacts-btn"
+        >
+          Заказать импланты
+        </a>
+      </div>
+      <div class="footer__social">
+        <p class="footer__social-content">
+          © 2025 Dental Resource.
+          <br />
+          Все права защищены.
+        </p>
+        <div class="footer__social-items">
+          <a href="#" target="_blank" class="btn-rect _white">
+            <svg>
+              <use xlink:href="img/icons/icons.svg#icon-yt"></use>
+            </svg>
+          </a>
+          <a href="#" target="_blank" class="btn-rect _white">
+            <svg>
+              <use xlink:href="img/icons/icons.svg#icon-tg"></use>
+            </svg>
+          </a>
+          <a href="#" target="_blank" class="btn-rect _white">
+            <svg>
+              <use xlink:href="img/icons/icons.svg#icon-gis"></use>
+            </svg>
+          </a>
+          <a href="#" target="_blank" class="btn-rect _white">
+            <svg>
+              <use xlink:href="img/icons/icons.svg#icon-ya"></use>
+            </svg>
+          </a>
+        </div>
+      </div>
+    </div>
+		<div class="footer__bottom">
+			<a href="#" target="_blank">Политика конфидециальности</a>
+			<div class="footer__bottom-end">
+				<a href="https://dentalresource.ru/" target="_blank">Сайт клиники</a>
+				<a href="#">Торговые марки</a>
+			</div>
+		</div>
+  </div>
 </footer>
 
 <script src="./files/fancybox/fancybox.min.js"></script>
