--- a/src/html/components/header.html
+++ b/src/html/components/header.html
@@ -47,12 +47,12 @@
     </div>
   </div>
   <ul class="list burger__list">
-    <li><a href="#">О лаборатории</a></li>
-    <li><a href="#">Услуги</a></li>
-    <li><a href="#">Результаты лечения</a></li>
-    <li><a href="#">Этапы производство</a></li>
-    <li><a href="#">Специалисты</a></li>
-    <li><a href="#">Контакты</a></li>
+    <li><a href="#s-about" data-anchor>О лаборатории</a></li>
+    <li><a href="#s-services" data-anchor>Услуги</a></li>
+    <li><a href="#s-res" data-anchor>Результаты лечения</a></li>
+    <li><a href="#s-steps" data-anchor>Этапы производства</a></li>
+    <li><a href="#s-team" data-anchor>Специалисты</a></li>
+    <li><a href="#s-contacts" data-anchor>Контакты</a></li>
   </ul>
   <div class="burger__contacts">
     <a href="tel:+79872179999" class="burger__tel">+7 (987) 217‒99‒99</a>
